Отладил кучу всего

--- a/model.ipynb
+++ b/model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "uKvl54txqBHv"
    },
@@ -20,12 +20,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-10 15:47:02.863569: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-02-10 15:47:02.878073: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-02-10 15:47:02.882354: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-10 15:47:02.893891: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2025-02-10 15:47:03.810066: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2025-02-14 11:41:18.892580: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-02-14 11:41:18.892610: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-02-14 11:41:18.892642: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2025-02-14 11:41:18.899373: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -74,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "jo3pJC0AsSk4"
    },
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "xT09CJxBTddV"
    },
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "id": "BIeVWeWNTuTu"
    },
@@ -120,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -145,7 +144,7 @@
        "(1873, 21, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "id": "NHtkQEJGVk4O"
    },
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,18 +211,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "id": "09uGhdLxYMAW"
    },
    "outputs": [],
    "source": [
-    "model_path = path + '/mlmodels/static.keras'"
+    "model_path = path + '/mlmodels/static'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "id": "wu8EA_tcsHFl"
    },
@@ -234,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -254,6 +253,22 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-14 11:41:25.734304: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.738900: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.739061: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.739789: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.739944: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.740058: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.796700: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.796872: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.797003: I tensorflow/compiler/xla/stream_executor/cuda/cuda_gpu_executor.cc:894] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
+      "2025-02-14 11:41:25.797102: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1886] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 10295 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3060, pci bus id: 0000:01:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -264,74 +279,73 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/olegg/anaconda3/envs/artist/lib/python3.10/site-packages/keras/src/layers/convolutional/base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1739191627.733410   15568 cuda_executor.cc:1015] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero. See more at https://github.com/torvalds/linux/blob/v6.0/Documentation/ABI/testing/sysfs-bus-pci#L344-L355\n",
-      "2025-02-10 15:47:07.781163: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2343] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
-      "Skipping registering GPU devices...\n"
+      "2025-02-14 11:41:26.590909: I tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:442] Loaded cuDNN version 8600\n",
+      "2025-02-14 11:41:26.895074: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7e9358380aa0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2025-02-14 11:41:26.895094: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): NVIDIA GeForce RTX 3060, Compute Capability 8.6\n",
+      "2025-02-14 11:41:26.899601: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n",
+      "2025-02-14 11:41:26.982931: I ./tensorflow/compiler/jit/device_compiler.h:186] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 6ms/step - accuracy: 0.4044 - loss: 1.2613 - val_accuracy: 0.9840 - val_loss: 0.4321\n",
+      "41/41 [==============================] - 2s 14ms/step - loss: 1.1545 - accuracy: 0.5256 - val_loss: 0.6622 - val_accuracy: 0.9199\n",
       "Epoch 2/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9937 - loss: 0.2570 - val_accuracy: 0.9929 - val_loss: 0.0619\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.2642 - accuracy: 0.9855 - val_loss: 0.0683 - val_accuracy: 0.9964\n",
       "Epoch 3/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9931 - loss: 0.0758 - val_accuracy: 0.9858 - val_loss: 0.0614\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0724 - accuracy: 0.9901 - val_loss: 0.0536 - val_accuracy: 0.9964\n",
       "Epoch 4/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9883 - loss: 0.0738 - val_accuracy: 0.9929 - val_loss: 0.0399\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0577 - accuracy: 0.9939 - val_loss: 0.0465 - val_accuracy: 0.9947\n",
       "Epoch 5/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9850 - loss: 0.0721 - val_accuracy: 0.9947 - val_loss: 0.0401\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0520 - accuracy: 0.9947 - val_loss: 0.0447 - val_accuracy: 0.9964\n",
       "Epoch 6/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9953 - loss: 0.0453 - val_accuracy: 0.9875 - val_loss: 0.0583\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0501 - accuracy: 0.9931 - val_loss: 0.0586 - val_accuracy: 0.9964\n",
       "Epoch 7/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9884 - loss: 0.0653 - val_accuracy: 0.9947 - val_loss: 0.0375\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0531 - accuracy: 0.9916 - val_loss: 0.0577 - val_accuracy: 0.9964\n",
       "Epoch 8/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9948 - loss: 0.0477 - val_accuracy: 0.9733 - val_loss: 0.0875\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0474 - accuracy: 0.9939 - val_loss: 0.0553 - val_accuracy: 0.9964\n",
       "Epoch 9/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9765 - loss: 0.1041 - val_accuracy: 0.9947 - val_loss: 0.0338\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0458 - accuracy: 0.9939 - val_loss: 0.0534 - val_accuracy: 0.9964\n",
       "Epoch 10/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9932 - loss: 0.0532 - val_accuracy: 0.9929 - val_loss: 0.0403\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0423 - accuracy: 0.9947 - val_loss: 0.0411 - val_accuracy: 0.9964\n",
       "Epoch 11/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9935 - loss: 0.0518 - val_accuracy: 0.9964 - val_loss: 0.0293\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0388 - accuracy: 0.9962 - val_loss: 0.0455 - val_accuracy: 0.9964\n",
       "Epoch 12/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9959 - loss: 0.0355 - val_accuracy: 0.9964 - val_loss: 0.0345\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0409 - accuracy: 0.9947 - val_loss: 0.0383 - val_accuracy: 0.9964\n",
       "Epoch 13/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9961 - loss: 0.0427 - val_accuracy: 0.9982 - val_loss: 0.0270\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0413 - accuracy: 0.9947 - val_loss: 0.0433 - val_accuracy: 0.9964\n",
       "Epoch 14/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9948 - loss: 0.0403 - val_accuracy: 0.9982 - val_loss: 0.0255\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0413 - accuracy: 0.9947 - val_loss: 0.0379 - val_accuracy: 0.9964\n",
       "Epoch 15/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9920 - loss: 0.0454 - val_accuracy: 0.9982 - val_loss: 0.0260\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0362 - accuracy: 0.9954 - val_loss: 0.0446 - val_accuracy: 0.9964\n",
       "Epoch 16/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9964 - loss: 0.0319 - val_accuracy: 0.9964 - val_loss: 0.0347\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0394 - accuracy: 0.9939 - val_loss: 0.0515 - val_accuracy: 0.9964\n",
       "Epoch 17/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9944 - loss: 0.0425 - val_accuracy: 0.9947 - val_loss: 0.0373\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0373 - accuracy: 0.9962 - val_loss: 0.0382 - val_accuracy: 0.9964\n",
       "Epoch 18/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9963 - loss: 0.0325 - val_accuracy: 0.9982 - val_loss: 0.0294\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0357 - accuracy: 0.9954 - val_loss: 0.0323 - val_accuracy: 0.9964\n",
       "Epoch 19/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9921 - loss: 0.0400 - val_accuracy: 1.0000 - val_loss: 0.0273\n",
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0337 - accuracy: 0.9962 - val_loss: 0.0364 - val_accuracy: 0.9964\n",
       "Epoch 20/20\n",
-      "\u001b[1m41/41\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 3ms/step - accuracy: 0.9923 - loss: 0.0409 - val_accuracy: 0.9947 - val_loss: 0.0272\n"
+      "41/41 [==============================] - 0s 4ms/step - loss: 0.0299 - accuracy: 0.9969 - val_loss: 0.0410 - val_accuracy: 0.9964\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.src.callbacks.history.History at 0x7b396e9ae2c0>"
+       "<keras.src.callbacks.History at 0x7e942a16abf0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "model = Sequential([\n",
-    "    Conv1D(60, 2, activation='relu', input_shape = x_train.shape[1:], kernel_regularizer = regularizers.L2(4e-4), dtype='float32'),\n",
-    "    Conv1D(50, 2, activation='relu', kernel_regularizer = regularizers.L2(4e-4)),\n",
+    "    Conv1D(60, 3, activation='relu', input_shape = x_train.shape[1:], kernel_regularizer = regularizers.L2(4e-4), dtype='float32'),\n",
+    "    Conv1D(50, 3, activation='relu', kernel_regularizer = regularizers.L2(4e-4)),\n",
     "    # MaxPooling1D(2),\n",
     "    Flatten(),\n",
     "    Dense(100, activation='relu'),\n",
@@ -349,11 +363,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "cLFTxnEAYM4n"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./mlmodels/static/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: ./mlmodels/static/assets\n"
+     ]
+    }
+   ],
    "source": [
     "model.save(model_path)"
    ]
@@ -794,7 +823,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "artist",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
